--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -769,16 +769,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5329, 16619) (16619,) <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert a collection of text documents to a matrix of token counts\n",
     "count_vectorizer = CountVectorizer(stop_words=\"english\")\n",
-    "count_train = count_vectorizer.fit_transform(X_train[\"text\"].values)\n",
-    "count_test = count_vectorizer.transform(X_test[\"text\"].values)\n",
+    "count_Xtr = count_vectorizer.fit_transform(X_train[\"text\"].values).toarray()\n",
+    "count_Xte = count_vectorizer.transform(X_test[\"text\"].values).toarray()\n",
     "\n",
-    "print(count_train.shape, count_train[10].shape)"
+    "print(count_Xtr.shape, count_Xtr[10].shape, type(count_Xtr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Logistic Regression classifier with Skip Gram model on test set: 0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistic Regression\n",
+    "reg_model_count = LogisticRegression()\n",
+    "reg_model_count.fit(count_Xtr, y_train)\n",
+    "cout_yr_pred = reg_model_count.predict(count_Xte)\n",
+    "error_reg_count = metrics.f1_score(y_test, cout_yr_pred, labels=None, pos_label=1, average='binary', \n",
+    "                                sample_weight=None, zero_division='warn')\n",
+    "print('Accuracy of Logistic Regression classifier with Skip Gram model on test set: {:.2f}'.format(error_reg_count))    # 0.75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear SVC\n",
+    "svc_count = make_pipeline(StandardScaler(), LinearSVC(random_state=0, tol=1e-5))\n",
+    "svc_count.fit(count_Xtr, y_train)\n",
+    "count_ys_pred = svc_count.predict(count_Xte)\n",
+    "error_svc_count = metrics.f1_score(y_test, count_ys_pred, labels=None, pos_label=1, average='binary', \n",
+    "                                sample_weight=None, zero_division='warn')\n",
+    "print('Accuracy of Linear SVC classifier on test set: {:.2f}'.format(error_svc_count))"
    ]
   },
   {
@@ -787,16 +833,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_vectorizer.get_stop_words()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count_train[5000]"
+    "# Gaussian Naive Bayes\n",
+    "gnb_count = GaussianNB()\n",
+    "gnb_count.fit(count_Xtr, y_train)\n",
+    "count_yg_pred = gnb_count.predict(count_Xte)\n",
+    "error_gnb_count = metrics.f1_score(y_test, count_yg_pred, labels=None, pos_label=1, average='binary', \n",
+    "                                sample_weight=None, zero_division='warn')                              \n",
+    "print('Accuracy of Gaussian Naive Bayes on test set: {:.2f}'.format(error_gnb_count))\n"
    ]
   },
   {
