--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -454,16 +454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21906843, 53788100)"
+       "(21907348, 53788100)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,14 +546,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Logistic Regression classifier with Skip Gram model on test set: 0.59\n"
+      "Accuracy of Logistic Regression classifier with Skip Gram model on test set: 0.60\n"
      ]
     }
    ],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "                ('linearsvc', LinearSVC(random_state=0, tol=1e-05))])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,14 +601,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Linear SVC classifier on test set: 0.64\n"
+      "Accuracy of Linear SVC classifier on test set: 0.61\n"
      ]
     }
    ],
@@ -617,7 +617,7 @@
     "error_svc = metrics.f1_score(y_test, ys_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')\n",
     "                                \n",
-    "print('Accuracy of Linear SVC classifier on test set: {:.2f}'.format(error_svc))  # 0.62"
+    "print('Accuracy of Linear SVC classifier on test set: {:.2f}'.format(error_svc))  # 0.61"
    ]
   },
   {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -814,9 +814,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Linear SVC classifier on test set: 0.66\n"
+     ]
+    }
+   ],
    "source": [
     "# Linear SVC\n",
     "svc_count = make_pipeline(StandardScaler(), LinearSVC(random_state=0, tol=1e-5))\n",
@@ -824,14 +832,22 @@
     "count_ys_pred = svc_count.predict(count_Xte)\n",
     "error_svc_count = metrics.f1_score(y_test, count_ys_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')\n",
-    "print('Accuracy of Linear SVC classifier on test set: {:.2f}'.format(error_svc_count))"
+    "print('Accuracy of Linear SVC classifier on test set: {:.2f}'.format(error_svc_count))  # 0.66"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Gaussian Naive Bayes on test set: 0.64\n"
+     ]
+    }
+   ],
    "source": [
     "# Gaussian Naive Bayes\n",
     "gnb_count = GaussianNB()\n",
@@ -839,7 +855,38 @@
     "count_yg_pred = gnb_count.predict(count_Xte)\n",
     "error_gnb_count = metrics.f1_score(y_test, count_yg_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')                              \n",
-    "print('Accuracy of Gaussian Naive Bayes on test set: {:.2f}'.format(error_gnb_count))\n"
+    "print('Accuracy of Gaussian Naive Bayes on test set: {:.2f}'.format(error_gnb_count))   #0.64\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorize original train & test data set\n",
+    "count_train = count_vectorizer.fit_transform(train[\"text\"].values).toarray()\n",
+    "count_test = count_vectorizer.transform(test[\"text\"].values).toarray()\n",
+    "\n",
+    "# Fit\n",
+    "reg_model_count.fit(count_train, train['target'])\n",
+    "\n",
+    "# Predict \n",
+    "pred_REG = pd.DataFrame(reg_model_count.predict(count_test))\n",
+    "\n",
+    "# Add 'id'\n",
+    "pred_REG = pd.concat([id_test, pred_REG], axis=1)\n",
+    "pred_REG = pred_REG.rename(columns={0: \"target\"})\n",
+    "\n",
+    "# Create csv file\n",
+    "submit_REG = pred_REG.to_csv('submission_count_REG.csv', index=False)    # score : 0.80018"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------"
    ]
   },
   {
