--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -741,9 +741,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create csv file\n",
-    "submit_SVC = pred_SVC.to_csv('submission_SVC.csv', index=False) # score : 0.72571\n",
-    "submit_NB = pred_NB.to_csv('submission_NB.csv', index=False)    # score : 0.58320"
+    "# # Create csv file\n",
+    "# submit_SVC = pred_SVC.to_csv('submission_SVC.csv', index=False) # score : 0.72571\n",
+    "# submit_NB = pred_NB.to_csv('submission_NB.csv', index=False)    # score : 0.58320"
    ]
   },
   {
@@ -878,8 +878,8 @@
     "pred_REG = pd.concat([id_test, pred_REG], axis=1)\n",
     "pred_REG = pred_REG.rename(columns={0: \"target\"})\n",
     "\n",
-    "# Create csv file\n",
-    "submit_REG = pred_REG.to_csv('submission_count_REG.csv', index=False)    # score : 0.80018"
+    "# # Create csv file\n",
+    "# submit_REG = pred_REG.to_csv('submission_count_REG.csv', index=False)    # score : 0.80018"
    ]
   },
   {
