--- a/Playground_May/Playground_May.ipynb
+++ b/Playground_May/Playground_May.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,8 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
     "# Show all columns in pandas DataFrame\n",
     "pd.set_option(\"display.max_columns\", None)      "
@@ -4165,10 +4167,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier()"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn.fit(Xtr, ytr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 ... 1 0 0]\n",
+      "Accuracy of KNN on test set: 0.70\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict\n",
+    "ypr_knn = knn.predict(Xte)\n",
+    "error_knn = metrics.roc_auc_score(yte, ypr_knn)   # AUC(area under curve) of ROC curve\n",
+    "print(ypr_knn)\n",
+    "print('Accuracy of KNN on test set: {:.2f}'.format(error_knn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 ... 1 1 0]\n",
+      "Accuracy of KNN on test set: 0.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn2 = KNeighborsClassifier(n_neighbors=800)\n",
+    "knn2.fit(Xtr, ytr)\n",
+    "\n",
+    "ypr_knn2 = knn2.predict(Xte)\n",
+    "error_knn2 = metrics.roc_auc_score(yte, ypr_knn2)   # AUC(area under curve) of ROC curve\n",
+    "print(ypr_knn2)\n",
+    "print('Accuracy of KNN on test set: {:.2f}'.format(error_knn2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4179,10 +4242,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianNB()"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit\n",
+    "gnb = GaussianNB()\n",
+    "gnb.fit(Xtr, ytr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 ... 1 0 0]\n",
+      "Accuracy of Naive Bayes on test set: 0.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict \n",
+    "ypr_gnb = gnb.predict(Xte)\n",
+    "error_gnb = metrics.roc_auc_score(yte, ypr_gnb)   # AUC(area under curve) of ROC curve\n",
+    "print(ypr_gnb)\n",
+    "print('Accuracy of Naive Bayes on test set: {:.2f}'.format(error_gnb))"
+   ]
   },
   {
    "cell_type": "markdown",
