--- a/Playground_May/Playground_May.ipynb
+++ b/Playground_May/Playground_May.ipynb
@@ -2279,6 +2279,368 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>f_00</th>\n",
+       "      <th>f_01</th>\n",
+       "      <th>f_02</th>\n",
+       "      <th>f_03</th>\n",
+       "      <th>f_04</th>\n",
+       "      <th>f_05</th>\n",
+       "      <th>f_06</th>\n",
+       "      <th>f_07</th>\n",
+       "      <th>f_08</th>\n",
+       "      <th>f_09</th>\n",
+       "      <th>f_10</th>\n",
+       "      <th>f_11</th>\n",
+       "      <th>f_12</th>\n",
+       "      <th>f_13</th>\n",
+       "      <th>f_14</th>\n",
+       "      <th>f_15</th>\n",
+       "      <th>f_16</th>\n",
+       "      <th>f_17</th>\n",
+       "      <th>f_18</th>\n",
+       "      <th>f_19</th>\n",
+       "      <th>f_20</th>\n",
+       "      <th>f_21</th>\n",
+       "      <th>f_22</th>\n",
+       "      <th>f_23</th>\n",
+       "      <th>f_24</th>\n",
+       "      <th>f_25</th>\n",
+       "      <th>f_26</th>\n",
+       "      <th>f_28</th>\n",
+       "      <th>f_29</th>\n",
+       "      <th>f_30</th>\n",
+       "      <th>f_27_01</th>\n",
+       "      <th>f_27_02</th>\n",
+       "      <th>f_27_03</th>\n",
+       "      <th>f_27_04</th>\n",
+       "      <th>f_27_05</th>\n",
+       "      <th>f_27_06</th>\n",
+       "      <th>f_27_07</th>\n",
+       "      <th>f_27_08</th>\n",
+       "      <th>f_27_09</th>\n",
+       "      <th>f_27_10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>900000</td>\n",
+       "      <td>0.442517</td>\n",
+       "      <td>0.174380</td>\n",
+       "      <td>-0.999816</td>\n",
+       "      <td>0.762741</td>\n",
+       "      <td>0.186778</td>\n",
+       "      <td>-1.074775</td>\n",
+       "      <td>0.501888</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.128371</td>\n",
+       "      <td>2.749347</td>\n",
+       "      <td>-1.006400</td>\n",
+       "      <td>-1.193879</td>\n",
+       "      <td>-2.435736</td>\n",
+       "      <td>-2.427430</td>\n",
+       "      <td>-1.966887</td>\n",
+       "      <td>5.734205</td>\n",
+       "      <td>99.478419</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>900001</td>\n",
+       "      <td>-0.605598</td>\n",
+       "      <td>-0.305715</td>\n",
+       "      <td>0.627667</td>\n",
+       "      <td>-0.578898</td>\n",
+       "      <td>-1.750931</td>\n",
+       "      <td>1.355550</td>\n",
+       "      <td>-0.190911</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-4.424098</td>\n",
+       "      <td>1.080762</td>\n",
+       "      <td>2.382405</td>\n",
+       "      <td>0.149442</td>\n",
+       "      <td>1.883322</td>\n",
+       "      <td>-2.848714</td>\n",
+       "      <td>-0.725155</td>\n",
+       "      <td>3.194219</td>\n",
+       "      <td>-65.993825</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>900002</td>\n",
+       "      <td>0.303990</td>\n",
+       "      <td>2.445110</td>\n",
+       "      <td>0.246515</td>\n",
+       "      <td>0.818248</td>\n",
+       "      <td>0.359731</td>\n",
+       "      <td>-1.331845</td>\n",
+       "      <td>1.358622</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-1.523864</td>\n",
+       "      <td>-1.406712</td>\n",
+       "      <td>-7.026098</td>\n",
+       "      <td>1.312277</td>\n",
+       "      <td>-5.157192</td>\n",
+       "      <td>1.714005</td>\n",
+       "      <td>0.585032</td>\n",
+       "      <td>0.066898</td>\n",
+       "      <td>-87.405622</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>900003</td>\n",
+       "      <td>0.154053</td>\n",
+       "      <td>0.260126</td>\n",
+       "      <td>-1.367092</td>\n",
+       "      <td>-0.093175</td>\n",
+       "      <td>-1.111034</td>\n",
+       "      <td>-0.948481</td>\n",
+       "      <td>1.119220</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.404597</td>\n",
+       "      <td>3.011085</td>\n",
+       "      <td>-0.594532</td>\n",
+       "      <td>-3.939475</td>\n",
+       "      <td>1.754570</td>\n",
+       "      <td>-2.364007</td>\n",
+       "      <td>-1.003320</td>\n",
+       "      <td>3.893099</td>\n",
+       "      <td>-281.293460</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>900004</td>\n",
+       "      <td>-1.651904</td>\n",
+       "      <td>-0.424266</td>\n",
+       "      <td>-0.667356</td>\n",
+       "      <td>-0.322124</td>\n",
+       "      <td>-0.089462</td>\n",
+       "      <td>0.181705</td>\n",
+       "      <td>1.784983</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.968516</td>\n",
+       "      <td>0.100594</td>\n",
+       "      <td>0.084906</td>\n",
+       "      <td>-0.985736</td>\n",
+       "      <td>-0.130467</td>\n",
+       "      <td>-3.557893</td>\n",
+       "      <td>1.210687</td>\n",
+       "      <td>1.861884</td>\n",
+       "      <td>25.629415</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id      f_00      f_01      f_02      f_03      f_04      f_05  \\\n",
+       "0  900000  0.442517  0.174380 -0.999816  0.762741  0.186778 -1.074775   \n",
+       "1  900001 -0.605598 -0.305715  0.627667 -0.578898 -1.750931  1.355550   \n",
+       "2  900002  0.303990  2.445110  0.246515  0.818248  0.359731 -1.331845   \n",
+       "3  900003  0.154053  0.260126 -1.367092 -0.093175 -1.111034 -0.948481   \n",
+       "4  900004 -1.651904 -0.424266 -0.667356 -0.322124 -0.089462  0.181705   \n",
+       "\n",
+       "       f_06  f_07  f_08  f_09  f_10  f_11  f_12  f_13  f_14  f_15  f_16  f_17  \\\n",
+       "0  0.501888     6     6     0     0     0     5     1     1     2     2     0   \n",
+       "1 -0.190911     1     3     4     0     2     1     3     0     0     0     2   \n",
+       "2  1.358622     3     3     4     1     1     3     2     2     4     1     0   \n",
+       "3  1.119220     0     0     4     2     1     5     0     3     3     1     4   \n",
+       "4  1.784983     2     2     2     0     0     3     0     1     2     0     2   \n",
+       "\n",
+       "   f_18      f_19      f_20      f_21      f_22      f_23      f_24      f_25  \\\n",
+       "0     1 -1.128371  2.749347 -1.006400 -1.193879 -2.435736 -2.427430 -1.966887   \n",
+       "1     0 -4.424098  1.080762  2.382405  0.149442  1.883322 -2.848714 -0.725155   \n",
+       "2     3 -1.523864 -1.406712 -7.026098  1.312277 -5.157192  1.714005  0.585032   \n",
+       "3     2 -1.404597  3.011085 -0.594532 -3.939475  1.754570 -2.364007 -1.003320   \n",
+       "4     2 -1.968516  0.100594  0.084906 -0.985736 -0.130467 -3.557893  1.210687   \n",
+       "\n",
+       "       f_26        f_28  f_29  f_30  f_27_01  f_27_02  f_27_03  f_27_04  \\\n",
+       "0  5.734205   99.478419     0     0        2        1        1        1   \n",
+       "1  3.194219  -65.993825     1     0        1        6        1        2   \n",
+       "2  0.066898  -87.405622     0     1        2        2        1        3   \n",
+       "3  3.893099 -281.293460     0     0        1        5        2        5   \n",
+       "4  1.861884   25.629415     0     2        1        5        2        2   \n",
+       "\n",
+       "   f_27_05  f_27_06  f_27_07  f_27_08  f_27_09  f_27_10  \n",
+       "0        2        1        4       12        1        3  \n",
+       "1        2        1        5        7        3        2  \n",
+       "2        1        2        2       11        5        5  \n",
+       "3        1        1        3       17        3        3  \n",
+       "4        2        2        4        1        2        6  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Numerize testing dataset\n",
+    "\n",
+    "# Split the letters\n",
+    "f_27_01_t = np.array(nth_char(test.f_27, 1))\n",
+    "f_27_02_t = np.array(nth_char(test.f_27, 2))\n",
+    "f_27_03_t = np.array(nth_char(test.f_27, 3))\n",
+    "f_27_04_t = np.array(nth_char(test.f_27, 4))\n",
+    "f_27_05_t = np.array(nth_char(test.f_27, 5))\n",
+    "f_27_06_t = np.array(nth_char(test.f_27, 6))\n",
+    "f_27_07_t = np.array(nth_char(test.f_27, 7))\n",
+    "f_27_08_t = np.array(nth_char(test.f_27, 8))\n",
+    "f_27_09_t = np.array(nth_char(test.f_27, 9))\n",
+    "f_27_10_t = np.array(nth_char(test.f_27, 10))\n",
+    "\n",
+    "# Create DataFrame\n",
+    "te_27 = pd.DataFrame({\"f_27_01\":f_27_01_t, \"f_27_02\":f_27_02_t, \"f_27_03\":f_27_03_t, \"f_27_04\":f_27_04_t, \n",
+    "                \"f_27_05\":f_27_05_t, \"f_27_06\":f_27_06_t, \"f_27_07\":f_27_07_t, \"f_27_08\":f_27_08_t, \n",
+    "                \"f_27_09\":f_27_09_t, \"f_27_10\":f_27_10_t})\n",
+    "\n",
+    "te_27 = te_27.applymap(to_num) \n",
+    "test = pd.concat([test, te_27], axis=1)\n",
+    "test = test.drop(columns=['f_27'])\n",
+    "test.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4289,6 +4651,72 @@
    "metadata": {},
    "source": [
     "## 6. Apply to the test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocessing\n",
+    "id_train = train[\"id\"]\n",
+    "id_test = test[\"id\"]\n",
+    "\n",
+    "org_ytr = train[\"target\"]\n",
+    "org_Xtr = train.drop([\"id\", \"target\"], axis=1)\n",
+    "\n",
+    "org_Xte = test.drop([\"id\"], axis=1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit \n",
+    "svm2 = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
+    "svm2.fit(org_Xtr, org_ytr)\n",
+    "\n",
+    "# randfore2 = RandomForestClassifier(max_depth=10, random_state=0, max_samples=100000)\n",
+    "# randfore2.fit(org_Xtr, org_ytr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict\n",
+    "pred_SVM = svm2.predict(org_Xte)\n",
+    "# pred_RF = randfore2.predict(org_Xte)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add 'id'\n",
+    "pred_SVM = pd.concat([id_test, pred_SVM], axis=1)\n",
+    "pred_SVM = pred_SVM.rename(columns={0: \"target\"})\n",
+    "\n",
+    "# pred_RF = pd.concat([id_test, pred_RF], axis=1)\n",
+    "# pred_RF = pred_RF.rename(columns={0: \"target\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create csv file\n",
+    "submit_SVM = pred_SVM.to_csv('submission_SVM.csv', index=False) # score :\n",
+    "# submit_RF = pred_RF.to_csv('submission_RF.csv', index=False) # score :"
    ]
   },
   {
