--- a/Playground_May/Playground_May.ipynb
+++ b/Playground_May/Playground_May.ipynb
@@ -4623,7 +4623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4636,9 +4636,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=10, max_samples=100000, random_state=0)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fit \n",
     "svm2 = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
@@ -4650,7 +4661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4661,7 +4672,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to pandas Series\n",
+    "pred_SVM = pd.Series(pred_SVM)\n",
+    "pred_RF = pd.Series(pred_RF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4675,21 +4697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create csv file\n",
-    "submit_SVM = pred_SVM.to_csv('submission_SVM.csv', index=False) # score :\n",
-    "submit_RF = pred_RF.to_csv('submission_RF.csv', index=False) # score :"
+    "submit_SVM = pred_SVM.to_csv('submission_SVM.csv', index=False) # score : 0.87968\n",
+    "submit_RF = pred_RF.to_csv('submission_RF.csv', index=False) # score : 0.80377"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
