--- a/House_Prices/House_Price_pred.ipynb
+++ b/House_Prices/House_Price_pred.ipynb
@@ -8165,6 +8165,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 7. Evaluation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_RMSE(y_pred):\n",
+    "    MSE = np.square(np.subtract(np.log(y_val),np.log(y_pred))).mean()\n",
+    "    return np.math.sqrt(MSE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7. Try various ML models"
    ]
   },
@@ -8177,10 +8195,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import load_diabetes\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "\n",
+    "RidgeReg = RidgeCV(alphas=[1e-3, 1e-2, 1e-1, 1]).fit(X_train, y_train)\n",
+    "y_RidgeReg = RidgeReg.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation with RidgeRegression is 0.1746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "invalid value encountered in log\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Error with RidgeRegression is\", round(log_RMSE(y_RidgeReg), 4))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8191,24 +8239,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "SVRlinear = make_pipeline(StandardScaler(), SVR(kernel='linear', C=1.0, epsilon=0.1))\n",
+    "SVRlinear.fit(X_train, y_train)\n",
+    "y_SVRlinear = SVRlinear.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error with SVR(kernel='linear') is 0.3542\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Error with SVR(kernel='linear') is\", round(log_RMSE(y_SVRlinear), 4))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - SVR(kernel='rbi')"
+    "### - SVR(kernel='rbf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "SVRrbf = make_pipeline(StandardScaler(), SVR(kernel='rbf', C=1.0, epsilon=0.1))\n",
+    "SVRrbf.fit(X_train, y_train)\n",
+    "y_SVRrbf = SVRrbf.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error with SVR(kernel='rbf') is 0.3938\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Error with SVR(kernel='rbf') is\", round(log_RMSE(y_SVRrbf), 4))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8239,11 +8333,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-------------------------"
+   ]
   }
  ],
  "metadata": {
