--- a/House_Prices/House_Price_pred.ipynb
+++ b/House_Prices/House_Price_pred.ipynb
@@ -8313,10 +8313,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import load_diabetes\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import VotingRegressor\n",
+    "\n",
+    "# Training classifiers\n",
+    "reg1 = GradientBoostingRegressor(random_state=1)\n",
+    "reg2 = RandomForestRegressor(random_state=1)\n",
+    "reg3 = LinearRegression()\n",
+    "EnsReg = VotingRegressor(estimators=[('gb', reg1), ('rf', reg2), ('lr', reg3)])\n",
+    "EnsReg = EnsReg.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict\n",
+    "y_Ereg = EnsReg.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error with Ensenble Voting Regressor is 0.1362\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Error with Ensenble Voting Regressor is\", round(log_RMSE(y_Ereg), 4))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8331,13 +8364,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-------------------------"
-   ]
   }
  ],
  "metadata": {
