--- a/Playground_Jun/Playground_Jun.ipynb
+++ b/Playground_Jun/Playground_Jun.ipynb
@@ -1,21 +1,54 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# check"
+    "## Evaluation\n",
+    "Submissions are scored on the root mean squared error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Blueprint\n",
+    "1. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#check2"
+    "# Import packages\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import tree\n",
+    "from scipy.special import expit\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "# Show all the columns and rows\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "# pd.set_option(\"display.max_rows\", None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Data Loading"
    ]
   },
   {
