--- a/Playground_Jun/Playground_Jun.ipynb
+++ b/Playground_Jun/Playground_Jun.ipynb
@@ -3869,7 +3869,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Target column\n",
+    "tc = 'F_1_2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3884,12 +3894,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Combine the new features df and the target df\n",
-    "def new_df(target_col):\n",
+    "def make_new_df(target_col):\n",
     "    \n",
     "    new_features = data.loc[:, abs_top5_list(target_col)]\n",
     "    data_sub = pd.concat([new_features, data.loc[:, target_col]], axis=1)\n",
@@ -3899,7 +3909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3923,101 +3933,122 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>F_3_24</th>\n",
-       "      <th>F_2_5</th>\n",
-       "      <th>F_3_23</th>\n",
-       "      <th>F_4_0</th>\n",
-       "      <th>F_3_14</th>\n",
-       "      <th>F_1_0</th>\n",
+       "      <th>F_3_4</th>\n",
+       "      <th>F_3_10</th>\n",
+       "      <th>F_2_13</th>\n",
+       "      <th>F_3_18</th>\n",
+       "      <th>F_4_8</th>\n",
+       "      <th>F_1_2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.301610</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.547214</td>\n",
-       "      <td>0.057216</td>\n",
-       "      <td>-0.354591</td>\n",
+       "      <td>-0.431996</td>\n",
+       "      <td>-1.116881</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.717021</td>\n",
+       "      <td>-0.561809</td>\n",
+       "      <td>2.304115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.032771</td>\n",
-       "      <td>-1.707374</td>\n",
-       "      <td>-1.547387</td>\n",
-       "      <td>1.380940</td>\n",
+       "      <td>-0.602324</td>\n",
+       "      <td>1.167272</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1.046357</td>\n",
+       "      <td>-0.060753</td>\n",
+       "      <td>-0.418548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.000822</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.142264</td>\n",
-       "      <td>1.914908</td>\n",
-       "      <td>0.489356</td>\n",
-       "      <td>0.256023</td>\n",
+       "      <td>-2.089889</td>\n",
+       "      <td>-1.031405</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.056089</td>\n",
+       "      <td>0.353381</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.999599</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.144558</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.228523</td>\n",
-       "      <td>-2.638262</td>\n",
-       "      <td>-0.976814</td>\n",
-       "      <td>-0.728420</td>\n",
+       "      <td>1.506448</td>\n",
+       "      <td>-0.264249</td>\n",
+       "      <td>-2.453602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.852815</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.768874</td>\n",
-       "      <td>-0.230342</td>\n",
-       "      <td>2.427308</td>\n",
-       "      <td>0.590212</td>\n",
+       "      <td>0.475876</td>\n",
+       "      <td>-0.894834</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.666499</td>\n",
+       "      <td>0.846891</td>\n",
+       "      <td>0.468009</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     F_3_24  F_2_5    F_3_23     F_4_0    F_3_14     F_1_0\n",
-       "0  0.301610      1       NaN  5.547214  0.057216 -0.354591\n",
-       "1       NaN      2  0.032771 -1.707374 -1.547387  1.380940\n",
-       "2  1.000822      1  0.142264  1.914908  0.489356  0.256023\n",
-       "3  0.999599      1  0.228523 -2.638262 -0.976814 -0.728420\n",
-       "4  1.852815      0 -0.768874 -0.230342  2.427308  0.590212"
+       "      F_3_4    F_3_10  F_2_13    F_3_18     F_4_8     F_1_2\n",
+       "0 -0.431996 -1.116881       5 -0.717021 -0.561809  2.304115\n",
+       "1 -0.602324  1.167272       4 -1.046357 -0.060753 -0.418548\n",
+       "2 -2.089889 -1.031405       2 -0.056089  0.353381       NaN\n",
+       "3       NaN  1.144558       1  1.506448 -0.264249 -2.453602\n",
+       "4  0.475876 -0.894834       4  0.666499  0.846891  0.468009"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_col = 'F_1_0'\n",
-    "\n",
-    "new_df(target_col).head()"
+    "new_df = make_new_df(tc)\n",
+    "new_df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Seperate rows having missing targets for prediction"
+    "## 5. Split into train and test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_test(target_col):\n",
+    "    test_df = new_df[new_df[target_col].isnull()]\n",
+    "    test_index = test_df.index\n",
+    "    \n",
+    "    train_df = new_df.drop(index = test_index)  \n",
+    "\n",
+    "    X_train = train_df.drop(target_col, axis=1)\n",
+    "    y_train = train_df[target_col]\n",
+    "\n",
+    "    X_test = test_df.drop(target_col, axis=1) \n",
+    "\n",
+    "    return X_train, y_train, X_test\n",
+    "\n",
+    "X_train, y_train, X_test = train_test(tc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18397, 6)\n"
+      "(981992, 5)\n"
      ]
     },
     {
@@ -4041,115 +4072,212 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>F_3_24</th>\n",
-       "      <th>F_2_5</th>\n",
-       "      <th>F_3_23</th>\n",
-       "      <th>F_4_0</th>\n",
-       "      <th>F_3_14</th>\n",
-       "      <th>F_1_0</th>\n",
+       "      <th>F_3_4</th>\n",
+       "      <th>F_3_10</th>\n",
+       "      <th>F_2_13</th>\n",
+       "      <th>F_3_18</th>\n",
+       "      <th>F_4_8</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>-0.108483</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.224413</td>\n",
-       "      <td>-1.315188</td>\n",
-       "      <td>-0.288987</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.431996</td>\n",
+       "      <td>-1.116881</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.717021</td>\n",
+       "      <td>-0.561809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>0.603902</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.144069</td>\n",
-       "      <td>2.200394</td>\n",
-       "      <td>-0.291451</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.602324</td>\n",
+       "      <td>1.167272</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1.046357</td>\n",
+       "      <td>-0.060753</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>0.653632</td>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.144558</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.147103</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.429972</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.506448</td>\n",
+       "      <td>-0.264249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>0.250162</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.631364</td>\n",
-       "      <td>3.266772</td>\n",
-       "      <td>1.857431</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>4</th>\n",
+       "      <td>0.475876</td>\n",
+       "      <td>-0.894834</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.666499</td>\n",
+       "      <td>0.846891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>289</th>\n",
-       "      <td>1.294791</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.132565</td>\n",
-       "      <td>-3.349840</td>\n",
-       "      <td>-0.174436</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>5</th>\n",
+       "      <td>-1.177509</td>\n",
+       "      <td>-1.536704</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.943717</td>\n",
+       "      <td>-0.082221</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       F_3_24  F_2_5    F_3_23     F_4_0    F_3_14  F_1_0\n",
-       "21  -0.108483      2  1.224413 -1.315188 -0.288987    NaN\n",
-       "128  0.603902      2  1.144069  2.200394 -0.291451    NaN\n",
-       "182  0.653632      1  0.147103       NaN -0.429972    NaN\n",
-       "191  0.250162      1  1.631364  3.266772  1.857431    NaN\n",
-       "289  1.294791      2  0.132565 -3.349840 -0.174436    NaN"
+       "      F_3_4    F_3_10  F_2_13    F_3_18     F_4_8\n",
+       "0 -0.431996 -1.116881       5 -0.717021 -0.561809\n",
+       "1 -0.602324  1.167272       4 -1.046357 -0.060753\n",
+       "3       NaN  1.144558       1  1.506448 -0.264249\n",
+       "4  0.475876 -0.894834       4  0.666499  0.846891\n",
+       "5 -1.177509 -1.536704       3 -0.943717 -0.082221"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_df = data_sub[data_sub['F_1_0'].isnull()]\n",
-    "\n",
-    "print(test_df.shape)\n",
-    "test_df.head()"
+    "print(X_train.shape)\n",
+    "X_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18008, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>F_3_4</th>\n",
+       "      <th>F_3_10</th>\n",
+       "      <th>F_2_13</th>\n",
+       "      <th>F_3_18</th>\n",
+       "      <th>F_4_8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-2.089889</td>\n",
+       "      <td>-1.031405</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.056089</td>\n",
+       "      <td>0.353381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>0.997155</td>\n",
+       "      <td>-1.685452</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.267226</td>\n",
+       "      <td>-0.432056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>0.101775</td>\n",
+       "      <td>1.474217</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.485308</td>\n",
+       "      <td>0.320539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>-0.034220</td>\n",
+       "      <td>0.970465</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.947834</td>\n",
+       "      <td>-0.282572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>408</th>\n",
+       "      <td>0.431173</td>\n",
+       "      <td>1.138439</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.597745</td>\n",
+       "      <td>0.858853</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        F_3_4    F_3_10  F_2_13    F_3_18     F_4_8\n",
+       "2   -2.089889 -1.031405       2 -0.056089  0.353381\n",
+       "137  0.997155 -1.685452       1  2.267226 -0.432056\n",
+       "337  0.101775  1.474217       5  0.485308  0.320539\n",
+       "350 -0.034220  0.970465       2  0.947834 -0.282572\n",
+       "408  0.431173  1.138439       5 -0.597745  0.858853"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_sub = data_sub."
+    "print(X_test.shape)\n",
+    "X_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(981992,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    2.304115\n",
+       "1   -0.418548\n",
+       "3   -2.453602\n",
+       "4    0.468009\n",
+       "5    0.270489\n",
+       "Name: F_1_2, dtype: float64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def train_pred(target_col):\n",
-    "\n",
-    "    # dataframe with features and one target column\n",
-    "    data_sub = pd.concat([data_features, data_targets.loc[:, target_col]], axis=1)\n",
-    "\n",
-    "    # list of rows with missing values\n",
-    "    test_rows = data_sub.index[pd.isnull(data_sub[target_col]) == True].tolist()\n",
-    "\n",
-    "    # training and testing dataset\n",
-    "    data_train = data_sub.drop(test_rows, axis=0) \n",
-    "    data_test = data_sub.loc[test_rows, :]\n",
-    "\n",
-    "    Xtr, Xte, ytr, yte = train_test_split(X, y, test_size=0.3, stratify=train[\"target\"])\n",
-    "    \n",
-    "    return "
+    "print(y_train.shape)\n",
+    "y_train.head()"
    ]
   },
   {
