--- a/Playground_Jun/Playground_Jun.ipynb
+++ b/Playground_Jun/Playground_Jun.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.svm import SVR\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "# Show all the columns and rows\n",
     "pd.set_option(\"display.max_columns\", None)  # columns\n",
@@ -2303,12 +2304,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create csv file\n",
-    "submit_Ridg = pred_Ridg.to_csv('submit_Ridg.csv', index=False)      # score: "
+    "# # Create csv file\n",
+    "# submit_Ridg = pred_Ridg.to_csv('submit_Ridg.csv', index=False)      # score: 141521(Opt.A)"
    ]
   },
   {
@@ -2320,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2370,6 +2371,26 @@
    "metadata": {},
    "source": [
     "### 5) Ensemble Regressors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get y_pred\n",
+    "pred_EnsReg = apply_ML(RandomForestRegressor(max_depth=5, random_state=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create csv file\n",
+    "submit_EnsReg = pred_EnsReg.to_csv('submit_EnsReg.csv', index=False)    # score: "
    ]
   },
   {
