--- a/Playground_Jun/Playground_Jun.ipynb
+++ b/Playground_Jun/Playground_Jun.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2282,7 @@
    "outputs": [],
    "source": [
     "# # Create csv file\n",
-    "# submit_LinReg = pred_LinReg.to_csv('submit_LinReg.csv', index=False)    # score: 1.41521(Opt.A)"
+    "# submit_LinReg = pred_LinReg.to_csv('submit_LinReg.csv', index=False)    # score: 1.41615(Opt.A)"
    ]
   },
   {
@@ -2309,7 +2309,7 @@
    "outputs": [],
    "source": [
     "# # Create csv file\n",
-    "# submit_Ridg = pred_Ridg.to_csv('submit_Ridg.csv', index=False)      # score: 141521(Opt.A)"
+    "# submit_Ridg = pred_Ridg.to_csv('submit_Ridg.csv', index=False)      # score: 141615(Opt.A)"
    ]
   },
   {
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2385,12 +2385,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create csv file\n",
-    "submit_EnsReg = pred_EnsReg.to_csv('submit_EnsReg.csv', index=False)    # score: "
+    "# # Create csv file\n",
+    "# submit_EnsReg = pred_EnsReg.to_csv('submit_EnsReg.csv', index=False)    # score: 141617(Opt.A)"
    ]
   },
   {
