--- a/Playground_Jun/Playground_Jun.ipynb
+++ b/Playground_Jun/Playground_Jun.ipynb
@@ -31,20 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import tree\n",
-    "from scipy.special import expit\n",
+    "# from scipy.special import expit\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.pipeline import make_pipeline\n",
+    "# from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -54,6 +54,7 @@
     "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "# Show all the columns and rows\n",
     "pd.set_option(\"display.max_columns\", None)  # columns\n",
@@ -1438,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1665,7 @@
        "4       5       2       2       1       0       4  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2153,21 +2154,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# def test_train(target_col):\n",
+    "\n",
+    "#     # Check the correlation\n",
+    "#     new_data = pd.concat([data_features, data.loc[:, target_col]], axis=1)\n",
+    "#     abs_cor = abs(new_data.corr())   \n",
+    "\n",
+    "#     # Get the list of top5 features\n",
+    "#     subject_col = abs_cor.loc[:, target_col]\n",
+    "#     subject_col = subject_col.drop(index = target_col)     # drop the row with itself\n",
+    "#     subject_col = subject_col.sort_values(ascending=False)\n",
+    "#     top5 = subject_col[:5].index.to_list()\n",
+    "\n",
+    "#     # Combine the new features df and the target df\n",
+    "#     top5_features = data.loc[:, top5]\n",
+    "#     data_sub = pd.concat([top5_features, data.loc[:, target_col]], axis=1)\n",
+    "\n",
+    "#     # Split into train and test\n",
+    "#     test_df = data_sub[data_sub[target_col].isnull()]\n",
+    "#     test_index = test_df.index\n",
+    "#     train_df = data_sub.drop(index = test_index)  \n",
+    "\n",
+    "#     X_train = train_df.drop(target_col, axis=1)\n",
+    "#     y_train = train_df[target_col]\n",
+    "#     X_test = test_df.drop(target_col, axis=1) \n",
+    "\n",
+    "#     return X_train, y_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Option B. Using PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the dataframe of top5 PC's\n",
+    "pca = PCA(n_components=5)\n",
+    "pca.fit(data_features)\n",
+    "data_pc5 = pd.DataFrame(pca.transform(data_features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def test_train(target_col):\n",
     "\n",
-    "    # Check the correlation\n",
-    "    new_data = pd.concat([data_features, data.loc[:, target_col]], axis=1)\n",
-    "    abs_cor = abs(new_data.corr())   \n",
-    "\n",
-    "    # Get the list of top5 features\n",
-    "    subject_col = abs_cor.loc[:, target_col]\n",
-    "    subject_col = subject_col.drop(index = target_col)     # drop the row with itself\n",
-    "    subject_col = subject_col.sort_values(ascending=False)\n",
-    "    top5 = subject_col[:5].index.to_list()\n",
-    "\n",
     "    # Combine the new features df and the target df\n",
-    "    top5_features = data.loc[:, top5]\n",
-    "    data_sub = pd.concat([top5_features, data.loc[:, target_col]], axis=1)\n",
+    "    data_sub = pd.concat([data_pc5, data.loc[:, target_col]], axis=1)\n",
     "\n",
     "    # Split into train and test\n",
     "    test_df = data_sub[data_sub[target_col].isnull()]\n",
@@ -2185,26 +2228,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - Option B. Using PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 5. Apply ML models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2213,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2281,8 +2310,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Create csv file\n",
-    "# submit_LinReg = pred_LinReg.to_csv('submit_LinReg.csv', index=False)    # score: 1.41615(Opt.A)"
+    "# Create csv file\n",
+    "submit_LinReg = pred_LinReg.to_csv('submit_LinReg(B).csv', index=False)    # score: 1.41615(Opt.A)"
    ]
   },
   {
@@ -2308,15 +2337,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Create csv file\n",
-    "# submit_Ridg = pred_Ridg.to_csv('submit_Ridg.csv', index=False)      # score: 141615(Opt.A)"
+    "# Create csv file\n",
+    "submit_Ridg = pred_Ridg.to_csv('submit_Ridg(B).csv', index=False)      # score: 141615(Opt.A)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3) SVR(kernel='linear')"
+    "### 3) Ensemble Regressors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get y_pred\n",
+    "pred_EnsReg = apply_ML(RandomForestRegressor(max_depth=5, random_state=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create csv file\n",
+    "submit_EnsReg = pred_EnsReg.to_csv('submit_EnsReg(B).csv', index=False)    # score: 141617(Opt.A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) SVR(kernel='linear')"
    ]
   },
   {
@@ -2343,7 +2399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4) SVR(kernel='rbf')"
+    "### 5) SVR(kernel='rbf')"
    ]
   },
   {
@@ -2364,33 +2420,6 @@
    "source": [
     "# Create csv file\n",
     "submit_SVRrbf = pred_SVRrbf.to_csv('submit_SVRrbf.csv', index=False)    # score: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5) Ensemble Regressors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get y_pred\n",
-    "pred_EnsReg = apply_ML(RandomForestRegressor(max_depth=5, random_state=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Create csv file\n",
-    "# submit_EnsReg = pred_EnsReg.to_csv('submit_EnsReg.csv', index=False)    # score: 141617(Opt.A)"
    ]
   },
   {
