--- a/Playground_Jun/Playground_Jun.ipynb
+++ b/Playground_Jun/Playground_Jun.ipynb
@@ -2306,12 +2306,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create csv file\n",
-    "submit_LinReg = pred_LinReg.to_csv('submit_LinReg(B).csv', index=False)    # score: 1.41615(Opt.A)"
+    "# # Create csv file\n",
+    "# submit_LinReg = pred_LinReg.to_csv('submit_LinReg(B).csv', index=False)    # score: 1.41615(Opt.A), 1.41614(Opt.B)"
    ]
   },
   {
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2333,12 +2333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create csv file\n",
-    "submit_Ridg = pred_Ridg.to_csv('submit_Ridg(B).csv', index=False)      # score: 141615(Opt.A)"
+    "# # Create csv file\n",
+    "# submit_Ridg = pred_Ridg.to_csv('submit_Ridg(B).csv', index=False)      # score: 141615(Opt.A), 1.41614(Opt.B)"
    ]
   },
   {
@@ -2350,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,12 +2360,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create csv file\n",
-    "submit_EnsReg = pred_EnsReg.to_csv('submit_EnsReg(B).csv', index=False)    # score: 141617(Opt.A)"
+    "submit_EnsReg = pred_EnsReg.to_csv('submit_EnsReg(B).csv', index=False)    # score: 141617(Opt.A), 1.41614(Opt.B)"
    ]
   },
   {
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2392,7 +2392,7 @@
    "outputs": [],
    "source": [
     "# Create csv file\n",
-    "submit_SVRlin = pred_SVRlin.to_csv('submit_SVRlin.csv', index=False)    # score: "
+    "submit_SVRlin = pred_SVRlin.to_csv('submit_SVRlin(B).csv', index=False)    # score: "
    ]
   },
   {
@@ -2419,7 +2419,7 @@
    "outputs": [],
    "source": [
     "# Create csv file\n",
-    "submit_SVRrbf = pred_SVRrbf.to_csv('submit_SVRrbf.csv', index=False)    # score: "
+    "submit_SVRrbf = pred_SVRrbf.to_csv('submit_SVRrbf(B).csv', index=False)    # score: "
    ]
   },
   {
