--- a/Playground_Aug/Playground_Aug.ipynb
+++ b/Playground_Aug/Playground_Aug.ipynb
@@ -41,8 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Same product code means 'same product'\n",
-    "- Same product consists of same 'attribute_0' and 'attribute_1'"
+    "- Same product_code means they are the same products\n",
+    "- Same product consists of same attributes"
    ]
   },
   {
@@ -56,9 +56,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Drop 'attribute_0' and 'attribute_1'\n",
-    "2. Get subsets for each product code (A, B, C, D, E)\n",
-    "3. Split into"
+    "1. Numerize 'attribute_0' and 'attribute_1'\n",
+    "2. Drop the product code(A, B, C, D, E)\n",
+    "3. Split into training and testing data\n",
+    "4. Apply ML models"
    ]
   },
   {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +598,7 @@
        "4          12.760          13.153          16.412         579.885        0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +657,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,9 +1134,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fdf"
-   ]
+   "source": []
   }
  ],
  "metadata": {
