--- a/Playground_Aug/Playground_Aug.ipynb
+++ b/Playground_Aug/Playground_Aug.ipynb
@@ -58,8 +58,9 @@
    "source": [
     "1. Numerize 'attribute_0' and 'attribute_1'\n",
     "2. Drop the product code(A, B, C, D, E)\n",
-    "3. Split into training and testing data\n",
-    "4. Apply ML models"
+    "3. Apply PCA\n",
+    "4. Split into training and validating data\n",
+    "5. Apply ML models"
    ]
   },
   {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +82,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn import metrics     # error function : metrics.roc_auc_score()\n",
     "\n",
     "# Show all the columns and rows\n",
     "pd.set_option(\"display.max_columns\", None)  # columns\n",
@@ -2297,11 +2299,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split into training and validating"
+    "# Split into training and validating\n",
+    "X_train, X_val, y_train, y_val = train_test_split(data_pca, y, test_size=0.33, \n",
+    "                                                    random_state=0, stratify=y)"
    ]
   },
   {
@@ -2313,10 +2317,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lucy/Library/Python/3.8/lib/python/site-packages/sklearn/svm/_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "LinSVC = LinearSVC(random_state=0)\n",
+    "LinSVC.fit(X_train, y_train)\n",
+    "y_LinSVC = LinSVC.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.45222492977517614"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the area under the ROC curve\n",
+    "metrics.roc_auc_score(y_val, y_LinSVC)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2327,10 +2367,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "SGD = SGDClassifier(random_state=0)\n",
+    "SGD.fit(X_train, y_train)\n",
+    "y_SGD = SGD.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49114693584069147"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the area under the ROC curve\n",
+    "metrics.roc_auc_score(y_val, y_SGD)"
+   ]
   },
   {
    "cell_type": "markdown",
